# yagu-search

./: .editorconfig  .gitattributes  .gitignore  Directory.Build.props  HELP.md  Install-Wagu.ps1  Install-Yagu.ps1  LICENSE  QuickGrep.sln  README.md  THIRD-PARTY-NOTICES.txt  Uninstall-Wagu.ps1  Uninstall-Yagu.ps1  Yagu-CLI-Examples.txt  Yagu.sln  build-all-installers.ps1  build-installer.ps1  install-dev-prerequisites.ps1  rebuild_run_debug.ps1  rebuild_run_release.ps1
.github/: copilot-instructions.md
PLANS/: IO_PERFORMANCE_SUGGESTIONS.md  RIPGREP_PHASE0_BASELINE.md  RIPGREP_PHASE6_SPIKE.md  RUST_PERF_IMPROVEMENTS_FROMRIP.md
QuickGrep/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  QuickGrep.csproj  app.manifest
QuickGrep.Benchmarks/: Program.cs  QuickGrep.Benchmarks.csproj
QuickGrep.Tests/: ContentSearcherTests.cs  EditorLauncherTests.cs  EverythingSdkTests.cs  FileGroupTests.cs  FileListerFallbackTests.cs  FileWatchDiagnosticsTests.cs  HelperTests.cs  HotkeyServiceTests.cs  LogServiceTests.cs  NativeParityTests.cs  NativeSearchOutcomeTests.cs  PerformanceBenchmarkTests.cs  QuickGrep.Tests.csproj  ResultStoreTests.cs  SearchEventTests.cs  SearchOptionsTests.cs  SearchProgressTests.cs  SearchResultCollectionTests.cs  SearchResultTests.cs  SearchServiceTests.cs  SelectedFileExportServiceTests.cs  SettingsServiceTests.cs  SyntaxHighlighterTests.cs  UiResultPerformanceTests.cs  coverage.runsettings
SdkTest/: Program.cs  SdkTest.csproj
Yagu/: App.xaml  App.xaml.cs  CliRunner.cs  HELP.html  HelpWindow.xaml.cs  MainWindow.AdminSettings.cs  MainWindow.FindReplace.cs  MainWindow.GoToLine.cs  (+21 more)
Yagu.Benchmarks/: Program.cs  Yagu.Benchmarks.csproj  Yagu.Benchmarks.csproj.lscache
Yagu.OcrWorker/: IWorkerOcrEngine.cs  NativeRuntime.cs  PaddleModelResolver.cs  PaddleWorkerEngine.cs  Program.cs  Protocol.cs  TesseractWorkerEngine.cs
Yagu.Tests/: AdvancedOptionsTests.cs  BinaryDetectorBranchCoverageTests.cs  BinaryDetectorCoverageTests.cs  BugReportThrottleTests.cs  CheckBoxIndeterminateGlyphRegressionTests.cs  CliRunnerRegressionTests.cs  CloudFileHelperTests.cs  ConPtyTerminalServiceTests.cs  ContentSearchPerformanceRegressionTests.cs  ContentSearcherCoverageTests.cs  ContentSearcherTests.cs  CoverageGapTests.cs  CoverageRound5Tests.cs  CpuOnlyModelSelectionRegressionTests.cs  CpuSemanticWarningTests.cs  DirectOutputSinkTests.cs  DirectoryAutoCompleteServiceTests.cs  DiskTypeDetectorTests.cs  DownloadGuardTests.cs  DriveEnumeratorTests.cs  DynamicGitignoreMatcherTests.cs  EditorLauncherProcessTests.cs  EditorLauncherTests.cs  EverythingSearchDialogRegressionTests.cs  ExcludedExtensionPredictorTests.cs  ExcludedExtensionWarningWiringTests.cs  ExcludedMethodTests.cs  ExcludedMethodTests_BufferReader.cs  ExcludedMethodTests_ContentSearcher.cs  ExcludedMethodTests_EditorLauncher.cs  ExcludedMethodTests_FileLister.cs  ExcludedMethodTests_FileListerEsExe.cs  ExcludedMethodTests_NativeMatchDecoder.cs  ExcludedMethodTests_SearchService.cs  ExcludedMethodTests_ZipArchiveSearcher.cs  FileGroupBranchCoverageTests.cs  FileGroupTests.cs  FileListerCoverageTests.cs  FileListerEsExeGateTests.cs  FileListerFallbackTests.cs  (+97 more)
quickgrep-core/: Cargo.toml
quickgrep-core/src/: ffi.rs  lib.rs  scan.rs  scan_grep.rs
quickgrep-core/tests/: cdrive_compare.rs  phase6_bench.rs
yagu-core/: Cargo.toml
yagu-core/.cargo/: config.toml
yagu-core/src/: ffi.rs  lib.rs  scan.rs  scan_grep.rs
yagu-core/tests/: cdrive_compare.rs  phase6_bench.rs
(+500 files in other folders)
