[package]
name = "yagu-core"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "yagu_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
memchr = "2"
memmap2 = "0.9"
regex = "1"
bstr = { version = "1", default-features = false, features = ["std"] }

# Phase 6 spike: optional adoption of ripgrep's library crates as an alternative
# scan path. Pinned to exact versions because the `grep-*` crates are
# workspace-internal to ripgrep and historically have breaking changes between
# releases. All three are dual MIT / Unlicense (verified on crates.io).
grep-searcher = { version = "=0.1.16", optional = true }
grep-regex = { version = "=0.1.14", optional = true }
grep-matcher = { version = "=0.1.8", optional = true }

[features]
default = []
# Enables the experimental scan_grep module that uses grep-searcher / grep-regex
# instead of the in-tree scanner. Off by default — Phase 6 spike.
grep_crates = ["dep:grep-searcher", "dep:grep-regex", "dep:grep-matcher"]

[dev-dependencies]
tempfile = "3"
walkdir = "2"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = "symbols"
